--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm start\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clientinstall": "npm install --prefix client",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build -- prefix frontend"
   },
   "author": "",
